Having a go at resolving operator calls, unary and binary. Missing how to deal with promotions. Earlier phases have resolved the correct method to use and have detected promotion is required. Question now is how best to eiher pass that information through or re-deduce it and then workout which parameters need promoting before call is made.