@@ -1,6 +1,6 @@
 package org.ek9lang.compiler.bootstrap;
 
-import static org.ek9lang.compiler.support.AggregateManipulator.EK9_LANG;
+import static org.ek9lang.compiler.support.EK9TypeNames.EK9_LANG;
 import static org.ek9lang.core.AssertValue.fail;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -279,7 +279,7 @@ class MinimalGenericBootStrapTest {
   }
 
   private AggregateSymbol resolveListOfString(final CompilableProgram program) {
-    var scope = program.getParsedModules(EK9_LANG).get(0).getModuleScope();
+    var scope = program.getParsedModules(EK9_LANG).getFirst().getModuleScope();
     var resolver = new TypeDefResolver(scope);
     var listOfString = resolver.typeDefToSymbol("List of (String)");
     assertTrue(listOfString.isPresent());
@@ -292,7 +292,7 @@ class MinimalGenericBootStrapTest {
    */
   private void assertMinimalEk9(final CompilableProgram program) {
 
-    var scope = program.getParsedModules(EK9_LANG).get(0).getModuleScope();
+    var scope = program.getParsedModules(EK9_LANG).getFirst().getModuleScope();
     assertNotNull(scope);
 
     assertTrue(scope.resolve(new TypeSymbolSearch("String")).isPresent());
